--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
     <div class="galva">
         <h1>Spēle "Noķer vasaru"!</h1>
     </div>
+    <div class="Noteikumi" >
+        <h2>Uzspied uz attēla!</h2>
+    </div>
+    <div id="bilde" style="position: absolute;">
+    
+    </div>
+
 </body>
 </html>
