--- a/index.html
+++ b/index.html
@@ -17,5 +17,18 @@
     
     </div>
 
+    <script>
+        var b=document.getElementById("bilde");
+        var klik=false; //vai uz bildes ir uspiests
+
+
+        function bildeParadas(){
+            if (!klik){
+                b.innerHTML="<img src= f1.jpg>";
+
+            }
+            bildeParadas()
+        }
+    </script>
 </body>
 </html>
