--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 b.innerHTML="<img src= f1.jpg>";
 
             }
-            bildeParadas()
+            bildeParadas();
         }
     </script>
 </body>
