--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             }
             
         }
-        bildeParadas();
+        function nokavet() {
+            setTimeout(bildeParadas, Math.random()*2000);
+            
+        }
+        nokavet()
     </script>
 </body>
 </html>
